# jomngaji

./: .gitignore  README.md  docker-compose.yml  package.json  pubspec.yaml
.github/workflows/: ci.yml
android/: build.gradle.kts
android/app/: google-services.json
android/app/src/main/: AndroidManifest.xml
apps/mobile/: README.md  pubspec.yaml
apps/mobile/android/app/: build.gradle.kts
apps/mobile/lib/: main.dart
apps/mobile/lib/src/: app.dart  bootstrap.dart
apps/mobile/linux/: CMakeLists.txt
apps/mobile/web/: manifest.json
apps/mobile/windows/runner/: Runner.rc  main.cpp
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/screens/belajar/: belajar_screen.dart  detail_surah_screen.dart  hafalan_screen.dart
lib/src/screens/profile/: profile_screen.dart
lib/src/services/: audio_service.dart
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
services/ai/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/ai/app/: main.py
services/ai/tests/: test_main.py
services/backend/: .env.example  .eslintrc.js  Dockerfile  README.md  package.json
services/backend/prisma/: schema.prisma
services/backend/src/: app.controller.ts  app.module.ts  main.ts
services/backend/src/assessments/: assessments.controller.ts  assessments.module.ts  (+1 more)
services/backend/test/: app.controller.spec.ts
test/: widget_test.dart
web/: index.html
windows/: CMakeLists.txt
(+45 files in other folders)
