[project]
name = "jomngaji-ai"
version = "0.1.0"
description = "FastAPI service for evaluating recitation audio"
authors = [{ name = "JomNgaji" }]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.4",
  "uvicorn[standard]>=0.32.0",
  "numpy>=1.26.0",
  "librosa>=0.10.2.post1",
  "pydantic>=2.9.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "httpx>=0.27.2",
  "ruff>=0.7.1"
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
